# alphadeforest_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: mlops_engine.yml  python-tests.yml
configs/: traing_config.yaml
notebooks/: alphadeforest-exps.ipynb
scripts/: evaluate.py  train.py
src/alphadeforest/: config_schema.py
src/alphadeforest/data/: dataset.py
src/alphadeforest/engine/: inference.py  trainer.py
src/alphadeforest/losses/: rpc.py
src/alphadeforest/models/: alpha_deforest.py  alphadeforest.py  cae.py  memory.py
src/alphadeforest/utils/: anomaly.py  reproducibility.py  visualizer.py
tests/: conftest.py  test_data.py  test_losses.py  test_models.py
